syntax = "proto3";

package pb;

option go_package = "github.com/khiemta03/bookstore-be/user-service/internal/grpc/user/pb";

message ListUsersRequest {
    int32 page = 1;
    int32 per_page = 2;
}
