syntax = "proto3";

package pb;

import "rpc_get_user_by_id.proto";
import "rpc_list_users.proto";
import "user.proto";

option go_package = "github.com/khiemta03/bookstore-be/user-service/internal/grpc/user/pb";

service UserService {
    rpc GetUserById (GetUserByIdRequest) returns (User) {};
    rpc ListUsers (ListUsersRequest) returns (stream User) {};
}